testing/tests/ui/incorrect_path.stderr
error: template "thisdoesnotexist.html" not found in directories ["$WORKSPACE/target/tests/trybuild/rinja_testing/templates"]
 --> tests/ui/incorrect_path.rs:4:3
  |
4 | #[template(path = "thisdoesnotexist.html")]
  |   ^^^^^^^^
